--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "nodemon": "^2.0.22"
+    "memorystorage": "^0.12.0",
+    "nodemon": "^2.0.22",
+    "sequential-ids": "^0.0.0"
   }
 }
